--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "dealintent-test",
+  "name": "di-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && export",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
