--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,7 @@ jobs:
     name: A test job
     steps:
       - uses: actions/checkout@v2.1.0
-      - name: !!name!!
-        uses: ./
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: ./
       - run: npm install -g yarn
       - run: yarn install --frozen-lockfile
       - run: yarn build
